--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     <div id="principal">
         <div id="titulo">Em Contrução</div>
-    </div>https://pcorreiax.github.io/    
+    </div>  
 </body>
 </html>
