--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     <!-- Social Media -->
 
-    <div id="redes-sociais">
+    <section id="redes-sociais">
         <ul>
             <li>
                 <a href="https://www.facebook.com/pedro.correia.7921"><i class="fab fa-facebook-square"></i></a>
                 <a href="https://github.com/pcorreiax"><i class="fab fa-github-square"></i></a>
             </li>
         </ul>
-    </div>
+    </section>
 </body>
 </html>
